<resources>
    <string name="app_name">MovieDBApp</string>
    <string name="title_movies">Movies</string>
    <string name="title_favorites">Favorites</string>
    <string name="title">Movie Title</string>
    <string name="release_date_lb">Release date:</string>
    <string name="average_vote">10.0</string>
    <string name="release_date">18-mar-2008</string>
    <string name="average_vote_lb">Vote Avg:</string>
</resources>


